--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Welkom bij de duisterethomas github page</h1>
 <p>Zoals je ziet staat hier niet veel...
     dat klopt!
+    Dit is eigenlijk alleen een test of github gpg signing werkt...
 </p>
