Add self promoting

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Welkom bij de duisterethomas github page</h1>
 <p>Zoals je ziet staat hier niet veel...
     dat klopt!
+    Ga maar naar mijn <a>YouTube kanaal</a href=www.youtube.com/@duisterethomas>
 </p>
