--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1>Welkom bij de duisterethomas github page</h1>
-<p>Zoals je ziet staat hier niet veel...
-    dat klopt!
-    Ga maar naar mijn <a href=https://www.youtube.com/@duisterethomas>YouTube kanaal</a>
+<p>Zoals je ziet staat hier niet veel... dat klopt!
+    
+    Ga maar naar mijn <a href=https://www.youtube.com/@duisterethomas>YouTube kanaal
+    
+    ...of niet, je moet het zelf weten</a>
 </p>
